k8s/kube-05-networking2/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              name: nginx-http
              #number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              name: multitool-http
              #number: 8080
